cmake_minimum_required(VERSION 3.15)
project(Assignment_5_1 C)

set(CMAKE_C_STANDARD 99)

add_executable(Assignment_5_1 main.c node.c node.h queue.c queue.h stack.c stack.h graphTraversals.c graphTraversals.h graph.h edge.h graphRepresentation.c graphRepresentation.h list.c list.h graphAlgorithms.c graphAlgorithms.h)