cmake_minimum_required(VERSION 3.16)
project(Assignment5 C)

set(CMAKE_C_STANDARD 11)

add_executable(Assignment5 main.c edge.h graph.h graphRepresentation.c graphRepresentation.h graphTraversals.c graphTraversals.h list.c list.h longestPath.c longestPath.h node.c node.h queue.c queue.h stack.c stack.h)